# desktop-tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.adoc  big-brother.c  brightness.c  ddc-ci.c  dwmstatus.c  elksmart-comm.c  fancontrol-ng.c  fancontrol-ng.conf.example  fancontrol-ng.service.in  gdm-switch-user.c  genpass.c  iexec.c  input-switch.c  paswitch.c  poller-pa.c  priod.c  priod.conf.example  priod.service.in  shellify  siprandom.c  wmstatus-weather.pl  wmstatus.c  wmstatus.conf.example
liust-50/: README.adoc  go.mod  go.sum
liust-50/charset/: charset.go
liust-50/cmd/liustatus/: kaomoji.go  status.go  weather.go
liust-50/cmd/liustsim/: simulator.go
